--- a/src/static/css/pages/_deliverables.scss
+++ b/src/static/css/pages/_deliverables.scss
@@ -2,25 +2,19 @@
 
 #deliverables {
 
-	.link-to {
-		position: relative;
-		top: -4.5em;
-	}
-
 	.link-container h4 {
 		text-decoration:none;
 		border-bottom: none;
 		display: inline-flex;
-
-		a {
-				padding: 0 .5em;
-				margin: 0;
-		}
 	}
 
 	a {
 		&:hover {
 			cursor: pointer;
 		}
+	}
+
+	div {
+		padding-bottom: 20px;
 	}
 }
