Overview and prettier

--- a/src/static/css/components/_markdown.scss
+++ b/src/static/css/components/_markdown.scss
@@ -1,13 +1,12 @@
 // Team Page
 
 .markdown {
-
   p {
     margin: auto;
   }
 
   h1 {
-    font-size: .8em;
+    font-size: 0.8em;
     margin-top: 3em;
   }
 }
